--- a/ros2_ws/src/tidybot_bringup/config/left_arm.yaml
+++ b/ros2_ws/src/tidybot_bringup/config/left_arm.yaml
@@ -1,9 +1,10 @@
 # TidyBot2 Left Arm Configuration (on separate U2D2)
 # Left arm: Motor IDs 11-19 on /dev/ttyUSB1
+# Joint names match simulation: left_waist, left_shoulder, etc.
 
-port: /dev/ttyUSB0
+port: /dev/ttyUSB_LEFT
 
-joint_order: [waist, shoulder, elbow, forearm_roll, wrist_angle, wrist_rotate, gripper]
+joint_order: [left_waist, left_shoulder, left_elbow, left_forearm_roll, left_wrist_angle, left_wrist_rotate, left_gripper]
 sleep_positions: [0, -1.80, 1.55, 0, 0.8, 0, 0]
 
 joint_state_publisher:
@@ -12,27 +13,28 @@ joint_state_publisher:
   topic_name: joint_states
 
 groups:
-  arm: [waist, shoulder, elbow, forearm_roll, wrist_angle, wrist_rotate]
+  left_arm: [left_waist, left_shoulder, left_elbow, left_forearm_roll, left_wrist_angle, left_wrist_rotate]
 
 grippers:
-  gripper:
+  left_gripper:
     horn_radius: 0.014
     arm_length: 0.024
-    left_finger: left_finger
-    right_finger: right_finger
+    angular_offset: 0.0  # No offset needed - using official Interbotix finger limits
+    left_finger: left_left_finger
+    right_finger: left_right_finger
 
 shadows:
-  shoulder:
-    shadow_list: [shoulder_shadow]
+  left_shoulder:
+    shadow_list: [left_shoulder_shadow]
     calibrate: true
-  elbow:
-    shadow_list: [elbow_shadow]
+  left_elbow:
+    shadow_list: [left_elbow_shadow]
     calibrate: true
 
 sisters:
 
 motors:
-  waist:
+  left_waist:
     ID: 11
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -42,7 +44,7 @@ motors:
     Max_Position_Limit: 4095
     Secondary_ID: 255
 
-  shoulder:
+  left_shoulder:
     ID: 12
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -52,7 +54,7 @@ motors:
     Max_Position_Limit: 3345
     Secondary_ID: 255
 
-  shoulder_shadow:
+  left_shoulder_shadow:
     ID: 13
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -62,7 +64,7 @@ motors:
     Max_Position_Limit: 3345
     Secondary_ID: 12
 
-  elbow:
+  left_elbow:
     ID: 14
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -72,7 +74,7 @@ motors:
     Max_Position_Limit: 3094
     Secondary_ID: 255
 
-  elbow_shadow:
+  left_elbow_shadow:
     ID: 15
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -82,7 +84,7 @@ motors:
     Max_Position_Limit: 3094
     Secondary_ID: 14
 
-  forearm_roll:
+  left_forearm_roll:
     ID: 16
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -92,7 +94,7 @@ motors:
     Max_Position_Limit: 4095
     Secondary_ID: 255
 
-  wrist_angle:
+  left_wrist_angle:
     ID: 17
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -102,7 +104,7 @@ motors:
     Max_Position_Limit: 3447
     Secondary_ID: 255
 
-  wrist_rotate:
+  left_wrist_rotate:
     ID: 18
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -112,7 +114,7 @@ motors:
     Max_Position_Limit: 4095
     Secondary_ID: 255
 
-  gripper:
+  left_gripper:
     ID: 19
     Baud_Rate: 3
     Return_Delay_Time: 0
