--- a/ros2_ws/src/tidybot_bringup/config/right_arm_pantilt.yaml
+++ b/ros2_ws/src/tidybot_bringup/config/right_arm_pantilt.yaml
@@ -2,9 +2,9 @@
 # Right arm: Motor IDs 1-9
 # Pan-Tilt: Motor IDs 21-22
 
-port: /dev/ttyUSB1
+port: /dev/ttyUSB_RIGHT
 
-joint_order: [right_waist, right_shoulder, right_elbow, right_forearm_roll, right_wrist_angle, right_wrist_rotate, right_gripper, pan, tilt]
+joint_order: [right_waist, right_shoulder, right_elbow, right_forearm_roll, right_wrist_angle, right_wrist_rotate, right_gripper, camera_pan, camera_tilt]
 sleep_positions: [0, -1.80, 1.55, 0, 0.8, 0, 0, 0, 0]
 
 joint_state_publisher:
@@ -12,14 +12,19 @@ joint_state_publisher:
   publish_states: true
   topic_name: joint_states
 
+# Publish pan_tilt group joints to a separate topic (absolute path to avoid namespace prefix)
+group_joint_state_publishers:
+  pan_tilt: /pan_tilt/joint_states
+
 groups:
   right_arm: [right_waist, right_shoulder, right_elbow, right_forearm_roll, right_wrist_angle, right_wrist_rotate]
-  pan_tilt: [pan, tilt]
+  pan_tilt: [camera_pan, camera_tilt]
 
 grippers:
   right_gripper:
     horn_radius: 0.014
     arm_length: 0.024
+    angular_offset: -1.0  # Offset to match left gripper behavior (right motor range is closer to ±π/2)
     left_finger: right_left_finger
     right_finger: right_right_finger
 
@@ -126,7 +131,7 @@ motors:
     Secondary_ID: 255
 
   # ===== PAN-TILT (IDs 21-22) =====
-  pan:
+  camera_pan:
     ID: 21
     Baud_Rate: 3
     Return_Delay_Time: 0
@@ -136,7 +141,7 @@ motors:
     Max_Position_Limit: 4095
     Secondary_ID: 255
 
-  tilt:
+  camera_tilt:
     ID: 22
     Baud_Rate: 3
     Return_Delay_Time: 0
