--- a/ros2_ws/src/tidybot_msgs/CMakeLists.txt
+++ b/ros2_ws/src/tidybot_msgs/CMakeLists.txt
@@ -21,6 +21,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/SolveIK.srv"
   "srv/GetJointState.srv"
   "srv/PlanToTarget.srv"
+  "srv/AudioRecord.srv"
   DEPENDENCIES std_msgs geometry_msgs sensor_msgs builtin_interfaces
 )
 
